[gd_scene load_steps=20 format=3 uid="uid://cjaq5y7dlj10c"]

[ext_resource type="Script" uid="uid://cxmac1h1micvm" path="res://script/player.gd" id="1_hjaqi"]
[ext_resource type="Texture2D" uid="uid://bfnbqgodq0xla" path="res://asset/player_item.tres" id="2_hjaqi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ct4mp"]
size = Vector2(16, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjaqi"]
size = Vector2(9, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4jxa"]
size = Vector2(16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvtld"]
atlas = ExtResource("2_hjaqi")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjaqi"]
atlas = ExtResource("2_hjaqi")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1vr"]
atlas = ExtResource("2_hjaqi")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_34jf3"]
atlas = ExtResource("2_hjaqi")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7b46"]
atlas = ExtResource("2_hjaqi")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2vtq"]
atlas = ExtResource("2_hjaqi")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fvbb"]
atlas = ExtResource("2_hjaqi")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml7e8"]
atlas = ExtResource("2_hjaqi")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihjo1"]
atlas = ExtResource("2_hjaqi")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct4mp"]
atlas = ExtResource("2_hjaqi")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4jxa"]
atlas = ExtResource("2_hjaqi")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh5ij"]
atlas = ExtResource("2_hjaqi")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp4bs"]
atlas = ExtResource("2_hjaqi")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2vtq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvtld")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjaqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34jf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7b46")
}],
"loop": true,
"name": &"midair",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2vtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fvbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml7e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihjo1")
}],
"loop": true,
"name": &"sliding",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct4mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4jxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh5ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp4bs")
}],
"loop": true,
"name": &"walking",
"speed": 7.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_hjaqi")

[node name="WalkingCol" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_ct4mp")

[node name="SlideCol" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 0.5)
shape = SubResource("RectangleShape2D_hjaqi")

[node name="MidAirCol" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_s4jxa")

[node name="Label" type="Label" parent="."]
offset_left = -3.0
offset_top = -22.0
offset_right = 37.0
offset_bottom = 1.0
scale = Vector2(0.24, 0.24)
text = "qwe"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_g2vtq")
animation = &"walking"
